# CPP-Game-Engine

./: CMakeLists.txt  CMakeSettings.json  CODEOWNERS  CPP-Game-Engine-VS.sln  CPP-Game-Engine-VS.vcxproj  CPP-Game-Engine-VS.vcxproj.filters  LICENSE  README.md  Source.cpp  default.frag  model.cpp  shader.cpp
assets/models/: cube.fbx  turtle.mtl
assets/shaders/: default.frag  default.vert
enc_temp_folder/13c5967f3ff3710cf1f2c2d15feb/: Source.cpp
enc_temp_folder/15f4e130185b875f2826a723607463a/: Source.cpp
enc_temp_folder/17866b8ae2905bc1cee636aa61b896ae/: model.cpp
include/: gameobject.h  model.h  shader.h
include/glad/: gl.h
