cmake_minimum_required(VERSION 3.24)
project(CPPGameProject)
add_executable(CPPGame source.cpp gl.c)
add_library(glad INTERFACE)
add_library(stb INTERFACE)
target_include_directories(glad INTERFACE include)	
find_path(STB_INCLUDE_DIRS "stb_c_lexer.h")
target_include_directories(stb INTERFACE ${STB_INCLUDE_DIRS})
find_package(glfw3 3.3 REQUIRED)
find_package(glm CONFIG REQUIRED)
target_link_options(CPPGame PRIVATE "/SUBSYSTEM:WINDOWS" "/ENTRY:mainCRTStartup")
target_link_libraries(CPPGame PUBLIC glad)
target_link_libraries(CPPGame PUBLIC stb)
target_link_libraries(CPPGame PUBLIC glfw)
target_link_libraries(CPPGame PUBLIC glm::glm)